--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "pydantic (>=2.11.7,<3.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "alembic (>=1.16.4,<2.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)"
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "aiogram-i18n (>=1.4,<2.0)",
+    "fluent-compiler (>=1.1,<2.0)",
+    "fluent-runtime (>=0.4.0,<0.5.0)"
 ]
 
 
