--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "aiogram-i18n (>=1.4,<2.0)",
     "fluent-compiler (>=1.1,<2.0)",
-    "fluent-runtime (>=0.4.0,<0.5.0)"
+    "fluent-runtime (>=0.4.0,<0.5.0)",
+    "email-validator (>=2.3.0,<3.0.0)"
 ]
 
 
