--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "aiogram-i18n (>=1.4,<2.0)",
     "fluent-compiler (>=1.1,<2.0)",
     "fluent-runtime (>=0.4.0,<0.5.0)",
-    "email-validator (>=2.3.0,<3.0.0)"
+    "email-validator (>=2.3.0,<3.0.0)",
+    "pytest-asyncio (>=1.1.0,<2.0.0)",
+    "pytest-dotenv (>=0.5.2,<0.6.0)"
 ]
 
 
