--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Kredo15",email = "kredo1511@yandex.ru"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11, <4.0"
 dependencies = [
     "aiogram (>=3.22.0,<4.0.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
@@ -20,7 +20,10 @@ dependencies = [
     "fluent-runtime (>=0.4.0,<0.5.0)",
     "email-validator (>=2.3.0,<3.0.0)",
     "pytest-asyncio (>=1.1.0,<2.0.0)",
-    "pytest-dotenv (>=0.5.2,<0.6.0)"
+    "pytest-dotenv (>=0.5.2,<0.6.0)",
+    "aiocryptopay (>=0.4.8,<0.5.0)",
+    "redis (>=6.4.0,<7.0.0)",
+    "yookassa (>=3.7.1,<4.0.0)",
 ]
 
 
